Fix layout issues

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,26 +10,25 @@ body {
 
 .intro {
   width: 35%;
-  margin: auto;
-  text-align: center;
+  margin: 200px auto;
 }
 
 .intro img {
   width: 100%;
-  margin-top: 200px;
 }
 
 .intro p {
   width: 100%;
-  font-size: 1em;
+  font-size: 1.3vw;
   letter-spacing: 0em;
   font-family: 'Roboto Slab', serif;
   text-align: left;
 }
 
 .intro h2 {
+  width: 100%;
   font-weight: 300;
-  font-size: 1.25em;
+  font-size: 1.5vw;
   color: #bdc3c7;
 }
 
@@ -53,14 +52,35 @@ textarea:focus, input:focus{
 #email {
   width: 100%;
   height: 40px;
-  font-size: 1.5em;
+  font-size: 1.5vw;
 }
 
-@media only screen and (max-width : 1000px){
-  body {
-    font-size: 0.5em;
-  }
+@media only screen and (max-width : 800px){
+
   .intro {
-    width: 60%;
+    margin-left: 80px;
   }
+
+  .intro img {
+    width: 150%;
+  }
+  .intro h2 {
+    width: 150%;
+    font-size: 5vw;
+  }
+  .intro p {
+    width: 150%;
+    font-size: 4vw;
+  }
+  .form {
+    width: 150%;
+  }
+
+  #email {
+    width: 150%;
+    height: 60px;
+    font-size: 4vw;
+  }
+
+
 }
